# coding-agent-poc

./: README.md  pyproject.toml
src/coding_agent/: main.py  tools.py
