[project]
name = "coding-agent"
version = "0.1.0"
description = "A simple coding agent for demonstration purposes"
readme = "README.md"
authors = [
    { name = "Jan Willem Kleinrouweler", email = "janwillemkl@gmail.com" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
coding-agent = "coding_agent.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
